// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can be rendered as home 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header>
      <div
        class="main-container main-container--content flex"
      >
        <a
          class="focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          <picture
            class="block"
          >
            <source
              media="(min-width: 640px)"
              srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
            />
            <source
              media="(min-width: 480px)"
              srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
            />
            <img
              alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
              src="/icons/app/icons8-dungeons-and-dragons-64.png"
            />
          </picture>
        </a>
        <div
          class="flex-1"
        >
          <div
            class="font-serif self-center"
          >
            <a
              class="focus:outline-none focus:ring-2 focus:ring-red-600"
              href="/"
            >
              [Translation for https://example.com/global/translations.ttl#appName does not exist]
            </a>
          </div>
          <nav
            class="pages-nav pages-nav--main-menu"
          >
            <ul
              class="pages-nav__list pages-nav__list--main-menu"
            >
              <li
                class="flex"
                data-testid="main-nav-list-item"
              >
                <a
                  class="pages-nav__link pages-nav__link--main-menu"
                  href="/characters"
                >
                  [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
                </a>
              </li>
              <li
                class="flex"
                data-testid="main-nav-list-item"
              >
                <a
                  class="pages-nav__link pages-nav__link--main-menu"
                  href="/rules"
                >
                  [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main>
      test
    </main>
    <footer
      class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
    >
      <div
        class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
      >
        <a
          class="link"
          href="/about"
        >
          [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
        </a>
        <a
          class="link"
          href="/faq"
        >
          [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
        </a>
      </div>
      <div
        class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
      >
        <button
          class="button"
          data-testid="dark-mode-selector-button"
          type="button"
        >
          <span>
            🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
          </span>
        </button>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Layout renders as non-home by default 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header>
      <div
        class="main-container main-container--content flex"
      >
        <a
          class="focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          <picture
            class="block"
          >
            <source
              media="(min-width: 640px)"
              srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
            />
            <source
              media="(min-width: 480px)"
              srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
            />
            <img
              alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
              src="/icons/app/icons8-dungeons-and-dragons-64.png"
            />
          </picture>
        </a>
        <div
          class="flex-1"
        >
          <div
            class="font-serif self-center"
          >
            <a
              class="focus:outline-none focus:ring-2 focus:ring-red-600"
              href="/"
            >
              [Translation for https://example.com/global/translations.ttl#appName does not exist]
            </a>
          </div>
          <nav
            class="pages-nav pages-nav--main-menu"
          >
            <ul
              class="pages-nav__list pages-nav__list--main-menu"
            >
              <li
                class="flex"
                data-testid="main-nav-list-item"
              >
                <a
                  class="pages-nav__link pages-nav__link--main-menu"
                  href="/characters"
                >
                  [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
                </a>
              </li>
              <li
                class="flex"
                data-testid="main-nav-list-item"
              >
                <a
                  class="pages-nav__link pages-nav__link--main-menu"
                  href="/rules"
                >
                  [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <button
      class="bg-black fixed top-0 left-0 w-screen h-screen opacity-80 z-0 lg:hidden hidden"
      data-testid="layout-fade"
      type="button"
    >
       
    </button>
    <div
      class="main-container main-container--main flex-1 flex flex-col lg:flex-row lg:space-x-2"
    >
      <div
        class="layout__sub-menu hidden lg:block"
        data-testid="layout-sub-menu"
      />
      <div
        class="flex-1 lg:flex-auto flex flex-col max-w-prose min-h-full"
      >
        <main
          class="flex-1"
        >
          test
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="hidden lg:block lg:flex-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
